--- a/src/styles/_hearosection.scss
+++ b/src/styles/_hearosection.scss
@@ -17,7 +17,10 @@
     &:hover .button-wrapper {
       opacity: 1;
     }
-    &:hover .user-details button {
+    &:hover .user-details a {
+      opacity: 1;
+    }
+    &:hover .user-details .inner-user-div {
       opacity: 1;
     }
 
@@ -36,11 +39,16 @@
         display: flex;
         justify-content: center;
         align-items: center;
-        padding: 8px 11px;
+        padding: 0 11px;
         background-color: #fff;
         border: 1px solid #d1d1d1;
-        color: #767676;
+        fill: #767676;
         border-radius: 0.5rem;
+
+        font-size: 14px;
+        height: 32px;
+        line-height: 30px;
+        padding: 0 11px;
       }
     }
 
@@ -59,6 +67,9 @@
         justify-content: baseline;
         align-items: center;
         margin: 0;
+        gap: 1rem;
+        opacity: 0;
+
         & img {
           width: 35px;
           border-radius: 50%;
@@ -72,7 +83,7 @@
         padding: 8px 11px;
         background-color: #fff;
         border: 1px solid #d1d1d1;
-        color: #767676;
+        fill: #767676;
         border-radius: 0.5rem;
         opacity: 0;
         transition: all 100ms ease-in-out;
