--- a/src/styles/_singleImage.scss
+++ b/src/styles/_singleImage.scss
@@ -15,6 +15,9 @@ div {
   &:hover .user-details button {
     opacity: 1;
   }
+  &:hover .user-details .inner-user-div a {
+    opacity: 1;
+  }
 
   & .button-wrapper {
     display: flex;
@@ -24,7 +27,7 @@ div {
     justify-content: end;
     gap: 0.5rem;
     z-index: 30;
-    opacity: 0;
+    opacity: 1;
 
     & .img-like,
     & .img-plus {
@@ -69,7 +72,7 @@ div {
       border: 1px solid #d1d1d1;
       color: #767676;
       border-radius: 0.5rem;
-      opacity: 0;
+      opacity: 1;
       transition: all 100ms ease-in-out;
     }
   }
