--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,7 +19,7 @@
   position: sticky;
   top: 0;
   background-color: #fff;
-  z-index: 999;
+  z-index: 100;
 }
 .nav-container .logo {
   margin-right: 0.5rem;
@@ -84,12 +84,12 @@
   max-width: 650px;
   width: 100%;
   background-color: white;
-  z-index: 10;
+  z-index: 200;
   position: absolute;
   color: black;
 }
 .nav-container .menu {
-  z-index: 1000;
+  z-index: 200;
   background-color: #fff;
   display: grid;
   padding: 24px 32px;
@@ -150,7 +150,7 @@
   position: sticky;
   top: 58px;
   background-color: #fff;
-  z-index: 100;
+  z-index: 50;
 }
 .subNavWrapper ul li {
   position: relative;
@@ -379,7 +379,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  z-index: 9999;
+  z-index: 200;
 }
 
 .outer {
@@ -388,7 +388,7 @@
   width: 100%;
   overflow: auto;
   inset: 0;
-  z-index: 999;
+  z-index: 201;
 }
 
 .image-info {
@@ -398,7 +398,6 @@
 }
 
 .single-image-portal {
-  z-index: 9999;
   border-top-right-radius: 0.2rem;
   border-top-left-radius: 0.2rem;
   padding: 1rem;
@@ -408,7 +407,6 @@
   margin-top: 16px;
   background-color: #fff;
   inset: 0;
-  z-index: 99999;
   color: #767676;
 }
 .single-image-portal::-webkit-scrollbar, .single-image-portal::-webkit-scrollbar-thumb {
@@ -584,4 +582,10 @@
   margin-block: 12px;
   padding-top: 5rem;
   font-weight: 400;
+}
+
+.grid-collection {
+  display: grid;
+  max-width: 300px;
+  grid-template-columns: 1fr 1fr;
 }/*# sourceMappingURL=main.css.map */
