--- a/src/styles/_singleImage.scss
+++ b/src/styles/_singleImage.scss
@@ -2,7 +2,7 @@ div {
   display: inline-block;
   width: 100%;
   background-size: auto;
-  margin-bottom: 24px;
+  // margin-bottom: 24px;
   position: relative;
   transition: all 100ms ease-in-out;
 
