--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -38,7 +38,9 @@
   justify-content: space-between;
   align-items: center;
 }
+.nav-container .search-bar form,
 .nav-container .search-bar input {
+  flex: 1;
   width: 100%;
   border: none;
   outline: none;
@@ -58,12 +60,14 @@
   list-style: none;
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 .nav-container .links .submit-btn {
   border: none;
   outline: none;
   padding: 0.6rem 1rem;
   border-radius: 0.25rem;
+  white-space: nowrap;
 }
 .nav-container .search-svg, .nav-container .google-lens, .nav-container .bell {
   fill: #767676;
@@ -137,6 +141,39 @@
   margin: 0;
 }
 
+@media screen and (max-width: 768px) {
+  .nav-container {
+    justify-content: flex-start;
+  }
+  .nav-container .links {
+    display: flex;
+  }
+  .nav-container .links ul .advertise-li, .nav-container .links ul .blog-li, .nav-container .links ul .submit-btn-li, .nav-container .links ul .bell-li, .nav-container .links ul .unsplash-plus {
+    display: none;
+  }
+}
+@media screen and (max-width: 456px) {
+  .nav-container .main-menu-wrapper {
+    right: 0;
+    font-size: 12px;
+  }
+  .nav-container .main-menu-wrapper .menu {
+    gap: 5px;
+    padding: 24px 8px;
+  }
+  .nav-container .main-menu-wrapper .company,
+  .nav-container .main-menu-wrapper .product,
+  .nav-container .main-menu-wrapper .community {
+    gap: 4px;
+  }
+  .nav-container .main-menu-wrapper h3 {
+    font-size: 14px;
+  }
+  .nav-container .links ul .submit-btn-li,
+  .nav-container .links ul .bell-li {
+    display: none;
+  }
+}
 .subNavWrapper {
   display: flex;
   gap: 1rem;
@@ -193,6 +230,7 @@
   right: 0;
   top: 50%;
   transform: translateY(-50%);
+  cursor: pointer;
 }
 .subNavWrapper .svg-wrapper {
   position: relative;
@@ -206,6 +244,7 @@
   left: 0;
   top: 50%;
   transform: translateY(-50%);
+  cursor: pointer;
 }
 
 .main-banner {
@@ -218,9 +257,19 @@
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  position: relative;
+}
+.main-banner .lazy-load-image-background {
+  position: absolute;
+  z-index: -1;
+}
+.main-banner img {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  -o-object-fit: cover;
+     object-fit: cover;
+  z-index: -1;
 }
 .main-banner .center-div {
   display: flex;
@@ -231,6 +280,7 @@
   width: 100%;
   margin: 0 auto;
   padding-top: 10rem;
+  padding-inline: 1rem;
 }
 .main-banner .center-div h1 {
   font-weight: 700;
@@ -255,14 +305,20 @@
   gap: 1rem;
   background-color: #eee;
   border-radius: 0.5rem;
-  padding: 1rem 1rem;
+  padding: 0.8rem 1rem;
   justify-content: space-between;
+  align-items: center;
+}
+.main-banner .search-bar .img-wrapper {
+  display: flex;
+  justify-content: center;
   align-items: center;
 }
 .main-banner .search-bar svg {
   fill: #767676;
 }
-.main-banner .search-bar input {
+.main-banner .search-bar input,
+.main-banner .search-bar form {
   width: 100%;
   border: none;
   outline: none;
@@ -282,6 +338,21 @@
   place-self: center;
 }
 
+@media screen and (max-width: 768px) {
+  .main-banner .search-bar {
+    display: none;
+  }
+  .main-banner .main-banner-footer {
+    font-size: 11px;
+    color: rgba(255, 255, 255, 0.5490196078);
+    padding: 1rem 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+  }
+  .main-banner .main-banner-footer span {
+    color: #fff;
+  }
+}
 .grid-container {
   -moz-column-count: 3;
        column-count: 3;
@@ -293,7 +364,6 @@
   display: inline-block;
   width: 100%;
   background-size: auto;
-  margin-bottom: 24px;
   position: relative;
   transition: all 100ms ease-in-out;
 }
@@ -312,7 +382,7 @@
 .grid-container div .button-wrapper {
   display: flex;
   position: absolute;
-  top: 1rem;
+  top: 0.5rem;
   right: 1rem;
   justify-content: end;
   gap: 0.5rem;
@@ -337,7 +407,7 @@
   padding: 0 1rem;
   display: flex;
   position: absolute;
-  bottom: 0;
+  bottom: 2rem;
   justify-content: space-around;
   align-items: center;
   color: #fff;
@@ -369,6 +439,24 @@
   transition: all 100ms ease-in-out;
 }
 
+@media screen and (max-width: 768px) {
+  .grid-container {
+    -moz-column-count: 2;
+         column-count: 2;
+    -moz-column-gap: 24px;
+         column-gap: 24px;
+    margin-top: 3rem;
+  }
+}
+@media screen and (max-width: 456px) {
+  .grid-container {
+    -moz-column-count: 1;
+         column-count: 1;
+    -moz-column-gap: 24px;
+         column-gap: 24px;
+    margin-top: 3rem;
+  }
+}
 .overlay {
   background-color: rgba(0, 0, 0, 0.5);
   position: fixed;
@@ -585,6 +673,20 @@
 }
 
 .grid-collection {
+  display: grid;
+  max-width: 300px;
+  grid-template-columns: 1fr 1fr;
+}
+
+.container {
+  max-width: 880px;
+  margin: 0 auto;
+}
+.container h2 {
+  text-transform: capitalize;
+  margin-top: 1.5rem;
+}
+.container .grid-collection {
   display: grid;
   max-width: 300px;
   grid-template-columns: 1fr 1fr;
