--- a/src/styles/_mainBanner.scss
+++ b/src/styles/_mainBanner.scss
@@ -1,18 +1,26 @@
 .main-banner {
   text-align: left;
   color: #fff;
-
   height: 600px;
   width: 100%;
-
   margin-top: auto;
   margin-bottom: auto;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
-  background-repeat: no-repeat;
-  background-size: cover;
-  background-position: center;
+  position: relative;
+
+  & .lazy-load-image-background {
+    position: absolute;
+    z-index: -1;
+  }
+  & img {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    object-fit: cover;
+    z-index: -1;
+  }
 
   & .center-div {
     display: flex;
@@ -23,6 +31,7 @@
     width: 100%;
     margin: 0 auto;
     padding-top: 10rem;
+    padding-inline: 1rem;
 
     & h1 {
       font-weight: 700;
@@ -51,14 +60,21 @@
     gap: 1rem;
     background-color: #eee;
     border-radius: 0.5rem;
-    padding: 1rem 1rem;
+    padding: 0.8rem 1rem;
     justify-content: space-between;
     align-items: center;
+
+    & .img-wrapper {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
 
     & svg {
       fill: #767676;
     }
-    & input {
+    & input,
+    form {
       width: 100%;
       border: none;
       outline: none;
@@ -76,6 +92,22 @@
     }
     & .license {
       place-self: center;
+    }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .main-banner .search-bar {
+    display: none;
+  }
+  .main-banner .main-banner-footer {
+    font-size: 11px;
+    color: #ffffff8c;
+    padding: 1rem 1rem;
+    display: grid;
+    grid-template-columns: 1fr 1fr;
+    & span {
+      color: #fff;
     }
   }
 }
