--- a/src/styles/_navbar.scss
+++ b/src/styles/_navbar.scss
@@ -29,7 +29,9 @@
     justify-content: space-between;
     align-items: center;
 
-    & input {
+    & form,
+    input {
+      flex: 1;
       width: 100%;
       border: none;
       outline: none;
@@ -50,6 +52,7 @@
       list-style: none;
       display: flex;
       align-items: center;
+      cursor: pointer;
     }
 
     & .submit-btn {
@@ -57,6 +60,7 @@
       outline: none;
       padding: 0.6rem 1rem;
       border-radius: 0.25rem;
+      white-space: nowrap;
     }
   }
 
@@ -140,5 +144,48 @@
       flex-direction: row;
       margin: 0;
     }
+  }
+}
+
+@media screen and (max-width: 768px) {
+  .nav-container {
+    justify-content: flex-start;
+    & .links {
+      display: flex;
+      & ul {
+        & .advertise-li,
+        & .blog-li,
+        & .submit-btn-li,
+        & .bell-li,
+        & .unsplash-plus {
+          display: none;
+        }
+      }
+    }
+  }
+}
+
+@media screen and (max-width: 456px) {
+  .nav-container {
+    .main-menu-wrapper {
+      right: 0;
+      & .menu {
+        gap: 5px;
+        padding: 24px 8px;
+      }
+      .company,
+      .product,
+      .community {
+        gap: 4px;
+      }
+      & h3 {
+        font-size: 14px;
+      }
+      font-size: 12px;
+    }
+  }
+  .nav-container .links ul .submit-btn-li,
+  .nav-container .links ul .bell-li {
+    display: none;
   }
 }
