--- a/src/styles/_mainBanner.scss
+++ b/src/styles/_mainBanner.scss
@@ -89,6 +89,7 @@
     grid-template-columns: 1fr 1fr 1fr;
     & span {
       color: #fff;
+      cursor: pointer;
     }
     & .license {
       place-self: center;
